Mon Jul 28 16:12:15 2003  Gan Deng  <gan.deng@vanderbilt.edu>

        * tao/Exception.h
        * tao/Exception.cpp

          Modify these two files in accordance with the new OMG CORBA
          C++ Mapping version 1.1.

          However, due to the problem of MS VC++ 6.0 compiler, not all
          specification for Exception type has been fulfilled. Some
          constructors, copy constructors and assignment operators which
          are supposed be be put into the "protected" section in class
	  declaration still remained in the "public" section. These 
	  changes will be made later when we full migrate to MS VC++
	  7.0 or later version.

          See the "NOTE" section in the Exception.h file for details.

Mon Jul 28 16:14:22 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Exception.cpp: Fixed explicit template build problems.

Mon Jul 28 14:46:16 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/TAO_Static.dsp:

          Added new files from 

          Mon Jul 28 12:34:16 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

          to static project.

Mon Jul 28 13:05:08 2003  Gan Deng <gan.deng@vanderbilt.edu>

	* tests/Param_Test/except.cpp
	* tests/Param_Test/param_test_i.cpp

	  Added the testing for the SystemException into the
	  exception test.

Mon Jul 28 13:03:57 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Any.cpp:
	* tao/Any.h: Provided a default implementation for
	  TAO::Any_Impl::_tao_decode ().

Mon Jul 28 12:47:22 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any_SystemException.cpp:

          Cosmetic changes.

        * tao/TAO.dsp:

          Added above file and corresponding header file to project.

Mon Jul 28 12:34:16 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Any_SystemException.h:
	* tao/Any_SystemException.cpp: New Any_Impl classes to be used by
	  different concrete CORBA::SystemException  types. The way it was