@@ -1,3 +1,11 @@
+Mon Jul 28 18:37:27 2003  Gan Deng  <gan.deng@vanderbilt.edu>
+
+	* tao/Muxed_TMS.cpp
+	  Modify the TAO_Muxed_TMS::clear_cache () function, which
+	  is supposed to be modified fully in the last patch at:
+	  
+	  Tue Jul 15 10:18:07 2003  Gan Deng  <gan.deng@vanderbilt.edu>
+	  
 Mon Jul 28 16:12:15 2003  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * tao/Exception.h
